// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcContainer should not display the titleIntro when title is not given 1`] = `
<div
  class="ec-container"
>
  <!---->
   
</div>
`;

exports[`EcContainer should render both titles when they are given in props 1`] = `
<div
  class="ec-container"
>
  <h1
    class="ec-container__title"
  >
    Lending
  </h1>
   
  <p
    class="ec-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and of your credit line.
  </p>
   
</div>
`;

exports[`EcContainer should render empty if no props were given 1`] = `
<div
  class="ec-container"
>
  <!---->
   
</div>
`;

exports[`EcContainer should use given slot 1`] = `
<div
  class="ec-container"
>
  <h1
    class="ec-container__title"
  >
    Lending
  </h1>
   
  <p
    class="ec-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and of your credit line.
  </p>
   
  <p>
    Random text
  </p>
</div>
`;
